2002-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: If given -NSHost specification for the current host,
	ignore it and use the standard name.
	* Source/GSTcpPort.m: ([-invalidate]) call superclass implementation
	at end ... so handles can find this port when they are destroying
	themselves.  Reverses last change I made to this.

2002-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/COPYING.LIB: New file ... just to make it *REALLY* obvious
	this code is under the LGPL

2002-04-18  Adam Fedor  <fedor@gnu.org>

	* Minimally working libffi support. Needs work.
	* configure.in: Allow libffi to be enabled.
	* Source/GSFFIInvocation.m: Rewrite.
	* Source/NSConnection.m (-forwardInvocation:forProxy:): Add libffi
	function.
	* Source/NSInvocation.m: Fixup cifframe arg functions.
	* Source/cifframe.m: Rewrite.
	* Testing/nsinvocation.m: Bug fix.

	* Documentation/coding-standards.texi: Remove info dir tag.
	* Documentation/gnustep-base.texi: Idem.
	* Resources/Languages/Slovak: New file.

Thu Apr 18 11:10:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSObjCRuntime.h: Updated #defines and
	Windows DLL export/import machinery to the new gnustep-make
	conventions.

2002-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: re-order headers so config.h is used on windoze
	* Source/NSFileManager.m: ([-fileSystemRepresentationWithPath:])
	modified to handle MSYS paths with '/drive/' prefix.
	* Source/GSTcpPort.m: ([-invalidate]) call superclass implementation
	at start, so flag gets set to say we are not valid, and we avoid any
	recursive calls.

2002-04-16  Richard Frith-Macdonald <rfm@gnu.org>

	* config/config.reuseaddr.c: New test for broken SO_REUSEADDR
	* configure.in: test for broken SO_REUSEADDR
	* acconfig.h: Add BROKEN_SO_REUSEADDR
	* configure: regenerated
	* Source/UnixFileHandle.m: Use reuseaddr info.
	* Source/GSTcpPort.m: Use reuseaddr info.
	* Tools/gdomap.c: Use reuseaddr info.