@@ -1,3 +1,7 @@
+2002-04-20  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/NSURL.m: ([-absoluteString]) anonymous bugfix applied.
+
 2002-04-19  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/gdnc.m: If given -NSHost specification for the current host,
